--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get:
-#  firebase_core: ^2.15.0
-#  firebase_auth: ^4.7.2
-#  google_sign_in: ^6.1.4
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
+  google_sign_in: ^6.1.4
   provider:
   otp_text_field: ^1.1.3
   intl:
   simple_gesture_detector: ^0.2.0
+  fl_country_code_picker: ^0.1.5
 
 dev_dependencies:
   flutter_test:
