--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,10 +48,12 @@ android {
         applicationId "com.example.sawari_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
+        minSdkVersion 20
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -71,4 +73,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation(platform("com.google.firebase:firebase-bom:32.1.1"))
     implementation("com.google.firebase:firebase-analytics")
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation "com.google.android.gms:play-services-location:11.0.1"
+
 }
