--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   intl:
   simple_gesture_detector: ^0.2.0
   fl_country_code_picker: ^0.1.5
+  image_picker: ^1.0.2
+  google_maps_flutter:
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
