--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get:
+  get: ^4.6.5
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
   google_sign_in: ^6.1.4
-  provider:
+  provider: ^6.0.5
   otp_text_field: ^1.1.3
-  intl:
+#  intl: ^0.18.1
   simple_gesture_detector: ^0.2.0
   fl_country_code_picker: ^0.1.5
   image_picker: ^1.0.2
-  google_maps_flutter:
+  google_maps_flutter: ^2.4.0
   geolocator: ^9.0.2
+  place_picker: ^0.10.0
+  logger:
 
 dev_dependencies:
   flutter_test:
