--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   place_picker: ^0.10.0
   logger:
   get_storage: ^2.1.1
+  flutter_spinkit: ^5.2.0
+  http:
+
 
 dev_dependencies:
   flutter_test:
