--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   http:
   fluttertoast: ^8.2.2
-
+  geodesy: ^0.9.0
 
 dev_dependencies:
   flutter_test:
